--- a/.env.local
+++ b/.env.local
@@ -11,3 +11,4 @@ NODE_MAILER_GMAIL_APP_PASSWORD=nymu chxf frrh wfzs
 PUSHER_APPID=1820532
 PUSHER_KEY=88c6b069946bb754a6b3
 PUSHER_SECRET=de30a5e9dc83bb13786b
+IP_KEY=57008ce40452182a39f7af7e203094dabab8f177e028140c470e9cf1
