--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@react-google-maps/api": "^2.19.3",
     "@uiw/react-color": "^2.3.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "formidable": "^3.5.1",
@@ -44,9 +46,11 @@
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
+    "recharts": "^2.12.7",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
