--- a/.env.local
+++ b/.env.local
@@ -12,3 +12,4 @@ PUSHER_APPID=1820532
 PUSHER_KEY=88c6b069946bb754a6b3
 PUSHER_SECRET=de30a5e9dc83bb13786b
 IP_KEY=57008ce40452182a39f7af7e203094dabab8f177e028140c470e9cf1
+NEXT_PUBLIC_GOOGLE_API_KEY=AIzaSyBmcVRSEA7YXe6ksPllKP9UgkLfSJNJfPo
