--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -19,7 +19,7 @@
     "@langchain/openai": "^0.2.7",
     "@langchain/pinecone": "^0.0.9",
     "@pinecone-database/pinecone": "^3.0.1",
-    "@prisma/client": "^5.17.0",
+    "@prisma/client": "^5.19.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -28,6 +28,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@react-google-maps/api": "^2.19.3",
     "@uiw/react-color": "^2.3.0",
     "axios": "^1.7.7",
@@ -36,7 +37,7 @@
     "clsx": "^2.1.1",
     "formidable": "^3.5.1",
     "fs": "^0.0.1-security",
-    "langchain": "^0.2.16",
+    "langchain": "^0.1.37",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
@@ -52,10 +53,12 @@
     "react-markdown": "^9.0.1",
     "recharts": "^2.12.7",
     "remark-gfm": "^4.0.0",
+    "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "vercel": "^32.3.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
