--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@react-google-maps/api": "^2.19.3",
+    "@stripe/stripe-js": "^4.4.0",
     "@uiw/react-color": "^2.3.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
@@ -57,6 +59,7 @@
     "remark-gfm": "^4.0.0",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
+    "stripe": "^16.10.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
