--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@stripe/stripe-js": "^4.4.0",
     "@uiw/react-color": "^2.3.0",
     "axios": "^1.7.7",
+    "canvg": "^4.0.2",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "formidable": "^3.5.1",
     "fs": "^0.0.1-security",
+    "jspdf": "^2.5.2",
     "langchain": "^0.1.37",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
